# The_Comprehensive_Guide_to_Using_Cpp_in_Flutter

./: README.md
Chapter-1/: .metadata  README.md  pubspec.yaml
Chapter-1/android/: build.gradle
Chapter-1/android/src/main/: AndroidManifest.xml
Chapter-1/example/: README.md
Chapter-1/example/ios/Runner.xcodeproj/: project.pbxproj
Chapter-1/example/lib/: main.dart
Chapter-1/ios/: build_ios.sh  flutter_native_example.podspec
Chapter-1/lib/: flutter_native_example.dart
Chapter-1/linux/: CMakeLists.txt
Chapter-1/macos/: flutter_native_example.podspec
Chapter-1/src/: CMakeLists.txt  build_ios_macos.sh  flutter_native_example.c
Chapter-1/windows/: CMakeLists.txt
Chapter-2/: .gitignore  README.md
Chapter-2/example/: pubspec.yaml
Chapter-2/example/linux/: my_application.cc
Chapter-2/ios/: flutter_native_example.podspec
Chapter-2/ios/Classes/: flutter_native_example.c
Chapter-2/macos/: flutter_native_example.podspec
Chapter-2/src/: CMakeLists.txt  build_ios_macos.sh  flutter_native_example.c
Chapter-2/windows/: CMakeLists.txt
Chapter-3/: README.md  ffigen.yaml  pubspec.yaml
Chapter-3/android/: settings.gradle
Chapter-3/example/lib/: main.dart
Chapter-3/example/linux/: CMakeLists.txt
Chapter-3/example/windows/: CMakeLists.txt
Chapter-3/lib/: flutter_native_example.dart  flutter_native_example_bindings_generated.dart
Chapter-3/linux/: CMakeLists.txt
Chapter-3/macos/: build_macos.sh
Chapter-3/macos/Classes/: flutter_native_example.c
Chapter-3/src/: flutter_native_example.cc  flutter_native_example.h
(+14 files in other folders)
